# rust-blog

./: Cargo.toml  README.md  Readme.md  Rocket.toml
src/: main.rs
src/api/: post.rs
src/db/: mod.rs
src/models/: mod.rs  post.rs  prelude.rs
src/response/: mod.rs
src/service/: post.rs
src/utils/: consts.rs  mod.rs  prelude.rs
